--- a/HaRepacker/Properties/Resources.ko.resx
+++ b/HaRepacker/Properties/Resources.ko.resx
@@ -375,4 +375,7 @@
   <data name="ExecutingAssemblyError" xml:space="preserve">
     <value>This is only available under the x86 version of HaRepacker, please get the alternative version.</value>
   </data>
+  <data name="EncTypeCustom" xml:space="preserve">
+    <value>Use custom encryption key</value>
+  </data>
 </root>
