--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -482,4 +482,7 @@ Click "Yes" to download the new version.</value>
   <data name="ExecutingAssemblyError" xml:space="preserve">
     <value>This is only available under the x86 version of HaRepacker, please get the alternative version.</value>
   </data>
+  <data name="EncTypeCustom" xml:space="preserve">
+    <value>Use custom encryption key</value>
+  </data>
 </root>
