--- a/HaRepacker/Properties/Resources.zh-CHS.resx
+++ b/HaRepacker/Properties/Resources.zh-CHS.resx
@@ -381,4 +381,7 @@
   <data name="ExecutingAssemblyError" xml:space="preserve">
     <value>This is only available under the x86 version of HaRepacker, please get the alternative version.</value>
   </data>
+  <data name="EncTypeCustom" xml:space="preserve">
+    <value>使用自定义编码</value>
+  </data>
 </root>
