--- a/HaRepacker/Properties/Resources.zh-CHT.resx
+++ b/HaRepacker/Properties/Resources.zh-CHT.resx
@@ -373,4 +373,7 @@
   <data name="ExecutingAssemblyError" xml:space="preserve">
     <value>This is only available under the x86 version of HaRepacker, please get the alternative version.</value>
   </data>
+  <data name="EncTypeCustom" xml:space="preserve">
+    <value>使用自定義編碼</value>
+  </data>
 </root>
