--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -485,4 +485,7 @@ Click "Yes" to download the new version.</value>
   <data name="EncTypeCustom" xml:space="preserve">
     <value>Use custom encryption key</value>
   </data>
+  <data name="EncTypeGenerate" xml:space="preserve">
+    <value>Bruteforce AES key (Generate)</value>
+  </data>
 </root>
