--- a/HaRepacker/Properties/Resources.ko.resx
+++ b/HaRepacker/Properties/Resources.ko.resx
@@ -139,7 +139,7 @@
     <value>GMS (늙은)</value>
   </data>
   <data name="EncTypeMSEA" xml:space="preserve">
-    <value>MSEA/Taiwan (늙은)</value>
+    <value>MSEA/ EMS/ Taiwan (늙은)</value>
   </data>
   <data name="EncTypeNone" xml:space="preserve">
     <value>BMS / GMS / MapleSEA / メイプルストーリー / 메이플스토리</value>
