--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -192,7 +192,7 @@ Please provide valid values before confirming.</value>
     <value>GMS (old)</value>
   </data>
   <data name="EncTypeMSEA" xml:space="preserve">
-    <value>MSEA /Taiwan (old)</value>
+    <value>MSEA/ EMS /Taiwan (old)</value>
   </data>
   <data name="EncTypeNone" xml:space="preserve">
     <value>BMS / GMS / MapleSEA / メイプルストーリー / 메이플스토리</value>
