--- a/HaRepacker/Properties/Resources.zh-CHS.resx
+++ b/HaRepacker/Properties/Resources.zh-CHS.resx
@@ -139,7 +139,7 @@
     <value>Global MapleStory (旧)</value>
   </data>
   <data name="EncTypeMSEA" xml:space="preserve">
-    <value>新楓之谷 / 冒险岛Online / 메이플스토리 / MapleSEA(旧)</value>
+    <value>新楓之谷 / 冒险岛Online / 메이플스토리 / MapleSEA/ EMS(旧)</value>
   </data>
   <data name="EncTypeNone" xml:space="preserve">
     <value>BMS / GMS / MapleSEA / メイプルストーリー / 메이플스토리</value>
